# build-example

./: .gitignore  README.md  hatch_build.py  pyproject.toml
src/build_example/: __init__.py  data.txt  example.py
